文件异常处理

--- a/config.json
+++ b/config.json
@@ -19,6 +19,8 @@
     ],
     "videoError": [
         "illegal",
-        "reached"
+        "reached",
+        "discontinuity",
+        "Error"
     ]
 }
